asoc-84530 - fix issue where text would sometimes wrap in time selector dropdown (#6037)

--- a/component-lib/app/styles/component-lib/base/form/_rsa-date-time-input.scss
+++ b/component-lib/app/styles/component-lib/base/form/_rsa-date-time-input.scss
@@ -73,3 +73,11 @@ $datePickerSpacing: $datePickerFontSize * 0.1;
     color: text-color(accentOne, darkest);
   }
 }
+
+.timerange-selector-panel {
+  .dropdown-action-list {
+    li {
+      white-space: nowrap;
+    }
+  }
+}
